test commit for travis

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="contatooh">
 <head>
 	<meta charset="UTF-8">
-	<title>Bem-vindo</title>
+	<title>Bem-vindo ao MEAN Stack</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body class="container">
